# wikitionary-dictionaries

./: .gitignore  Cargo.toml  README.md  SOURCES.md
src/: build.rs  dictzip.rs  fetch.rs  lang.rs  main.rs  model.rs  model_def.rs  package.rs  stardict.rs
