[package]
name = "wiktionary-verb-dictionaries"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Build StarDict verb-conjugation companion dictionaries from Wiktionary data (via kaikki/wiktextract)."
repository = "https://github.com/DrPandemic/wikitionary-verb-dictionaries"

[[bin]]
name = "verbdict"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
indicatif = "0.17"
anyhow = "1"
flate2 = "1"
tar = "0.4"
zstd = "0.13"
sha2 = "0.10"

[dev-dependencies]
# The exact reader + zstd decoder irondict uses — to verify our release assets
# round-trip through irondict's install pipeline.
stardict = { version = "0.2", default-features = false }
ruzstd = "0.8"
